🔥 Remove FLATTENER from Album interface